Always return false on IsHandlingSendingEvent This fixes an issue on closing Web contents on headless Mac, since it makes think Web contents that the current view is still handling UI events. See https://cs.chromium.org/chromium/src/content/browser/web_contents/web_contents_view.h?rcl=e0bef062337921727eb9b670b417ebd0b6d86fd6&l=131

BUG=713268

Review-Url: https://codereview.chromium.org/2853473002
Cr-Commit-Position: refs/heads/master@{#468132}