headless/lib/browser/headless_shell_application_mac.mm
@@ -10,9 +10,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @implementation HeadlessShellCrApplication
 
 - (BOOL)isHandlingSendEvent {
-  // The CrAppProtocol must return true if [NSApplication sendEvent:] is
-  // currently on the stack. seee |CrAppProtocol| in |MessagePumpMac|.
-  return true;
+  // Since headless mode is non-interactive, always return false.
+  return false;
 }
 
 @end
